--- a/package.json
+++ b/package.json
@@ -1,19 +1,13 @@
 {
-  "name": "flutter-to-react-destination",
+  "name": "my-react-project",
   "version": "1.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "test": "jest"
   },
   "devDependencies": {
-    "vite": "^5.0.0"
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/jest-dom": "^6.0.0",
+    "jest": "^29.0.0"
   }
 }
-
